welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: ')' expected but 'if' found.
		if(nums(k)==6 && nums(k+1)==1+nums(k){
                ^array667:10: error: ')' expected but 'if' found.
		if(nums(k)!=6){
                ^array667:15: error: ';' expected but 'return' found.
	return j
        ^